# Grotto

./: .gitignore  .pre-commit-config.yaml  fix_rope_relative_position.patch  generator.py  inference.py  misc.py  pipeline.py  pyproject.toml  scheduler.py
configs/universal/: config.json  inference.yaml
examples/: camera_pose_demo.py  pose_aware_pipeline_demo.py
grotto/: __init__.py  camera_control.py  camera_control_export.py  camera_pose.py  conditions.py  generator.py  misc.py  profiling.py  scheduler.py  types.py
grotto/modeling/: __init__.py  attention.py  causal_model.py  causal_self_attention.py  constant.py  cross_attention.py  paged_cache.py  predictor.py  ring_buffer_cache.py  ring_buffer_visual_cache.py  rope.py  vae.py  vae_wrapper.py  weight_mapping_config.py
grotto/modeling/kv_cache/: __init__.py  dual_plane.py
grotto/modeling/modular_action/: __init__.py  action_config.py  action_module.py  interfaces.py  movement_control.py  view_control.py
grotto/modeling/modular_action/kernels/: preprocessor_kernel.py
grotto/modeling/wanx_vae_src/: __init__.py  attention.py  clip.py  tokenizers.py  vae.py  xlm_roberta.py
grotto/pipeline/: __init__.py  action_strategies.py  base_pipeline.py  batch_pipeline.py  cache_manager.py  condition_processor.py  config.py  pose_aware_pipeline.py  pose_tracker.py
models/: causal_model.py  causal_self_attention.py  paged_cache.py  predictor.py  ring_buffer_cache.py  vae.py  vae_block.py  vae_wrapper.py  wan_models.py
models/modular_action/: __init__.py  action_config.py  action_module.py  injectors.py  interfaces.py  movement_control.py  view_control.py
models/modular_action/kernels/: before_attn_kernel.py  kv_cache_kernel.py
pipeline/: __init__.py  action_strategies.py  base_pipeline.py  batch_pipeline.py  cache_manager.py  condition_processor.py  config.py
tests/: test_kv_cache_stack.py
