[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "grotto"
version = "0.1.0"
description = "Video Generation with Causal Models"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "numpy",
    "pillow",
    "einops",
    "omegaconf",
    "safetensors",
    "diffusers",
    "typer",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[project.scripts]
grotto-inference = "inference:main"

[tool.setuptools]
packages = ["grotto"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
